Create endpoint for state and city (#221)
